# claudewheel

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  c  package.json  pyproject.toml  selfdoc.json
.github/workflows/: ci-pypi.yml  ci.yml  publish.yml
.rlsbl/: config.json  hashes.json  managed-files.json
.rlsbl/bases/: CLAUDE.md
.rlsbl/changes/: .validated  0.10.0.md  0.10.1.jsonl  0.10.1.md  0.11.0.md  0.12.0.jsonl  0.12.0.md  0.13.0.jsonl  0.13.0.md  0.13.1.md  0.14.0.md  0.15.0.md  0.15.1.jsonl  0.15.1.md  0.16.0.jsonl  0.16.0.md  0.16.1.jsonl  0.16.1.md  0.17.0.md  0.18.0.jsonl  0.18.0.md  0.18.1.md  0.18.2.md  0.19.0.jsonl  0.19.0.md  0.19.1.md  0.20.0.jsonl  0.20.0.md  0.20.1.md  0.21.0.jsonl  0.21.0.md  0.22.0.jsonl  0.22.0.md  0.22.1.md  0.23.0.md  0.23.1.md  0.23.2.md  0.23.3.jsonl  (+22 more)
.selfdoc/: manifest.json
.strictcli/: config.json  schema.json
claude_launcher/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  defaults.py  fuzzy.py  gc.py  health.py  hooks.py  install.py  launch.py  migrate.py  profile_ops.py  redir.py  renderer.py  segment.py  state.py  terminal.py  theme.py  wizard.py
claudewheel/: __init__.py  __main__.py  app.py  appdata.py  auth.py  binaries.py  cli.py  clients.py  config.py  constants.py  defaults.py  discovery.py  fsutil.py  fuzzy.py  gc.py  guardrail.py  health.py  hook_scripts.py  hooks.py  import_.py  install.py  launch.py  migrate.py  mv.py  patch_profiles.py  permission.py  profile.py  profile_info.py  profile_ops.py  profile_store.py  pty_runner.py  reconcile.py  redir.py  renderer.py  segment.py  session.py  shared_store.py  state.py  stats.py  terminal.py  (+5 more)
docs/: _CLAUDE.md  _README.md  claudewheel-__main__.md  claudewheel-app.md  claudewheel-appdata.md  claudewheel-auth.md  claudewheel-binaries.md  claudewheel-cli.md  claudewheel-clients.md  claudewheel-config.md  claudewheel-constants.md  claudewheel-defaults.md  claudewheel-discovery.md  claudewheel-fsutil.md  claudewheel-fuzzy.md  claudewheel-gc.md  claudewheel-guardrail.md  claudewheel-health.md  claudewheel-hook_scripts.md  claudewheel-hooks.md  claudewheel-import_.md  claudewheel-install.md  claudewheel-launch.md  claudewheel-migrate.md  claudewheel-mv.md  claudewheel-patch_profiles.md  claudewheel-permission.md  claudewheel-profile.md  claudewheel-profile_info.md  claudewheel-profile_ops.md  claudewheel-profile_store.md  claudewheel-pty_runner.md  claudewheel-reconcile.md  claudewheel-redir.md  claudewheel-renderer.md  claudewheel-segment.md  claudewheel-session.md  claudewheel-shared_store.md  claudewheel-state.md  claudewheel-stats.md  (+33 more)
scripts/: mv-history.sh  patch-profiles  pre-push-hook.sh  record-gif.sh  redir-history.sh
tests/: CONSTANT_PATCHING_AUDIT.md  test_app.py  test_appdata.py  test_auth.py  test_binaries.py  test_check_autospec.py  test_cli.py  test_clients.py  test_deferred_apply.py  test_deploy_hooks.py  test_detect_bg.py  test_discover.py  test_dump_schema_flag.py  test_fsutil.py  test_fuzzy.py  test_gc.py  test_guardrail.py  test_health.py  test_helpers_meta.py  test_hints.py  test_hook_advise_exec.py  test_hook_unsafe_exec.py  test_import.py  test_inode.py  test_install.py  test_key_dispatch.py  test_launch.py  test_launch_exec.py  test_launch_integration.py  test_migrate.py  test_migration.py  test_mv.py  test_patch_profiles.py  test_permission.py  test_profile.py  test_profile_info.py  test_profile_ops.py  test_profile_store.py  test_profile_store_write.py  test_provenance.py  (+26 more)
todo/: core.md  detect-and-fix-auth-shadow.md  disallowed-tools-not-enforced.md  fix-health-warnings.md  hook-safegit-guard.md  lsp-replacement-mcp.md  mv-nested-project-migration.md  orphan-index.md  publish-on-npm.md  rationalize-profile-discovery-rules.md  rename-config-dir.md  selfdoc-root-file-templates.md  session-segment.md  shift-tab-parametric.md  tag-based-context-injection.md  wizard-direct-token-input.md  wizard-signal-handler.md
(+40 files in other folders)
