[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudewheel"
version = "0.6.1"
description = "TUI launcher for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "smm-h", email = "smmh72@gmail.com" },
]
keywords = ["claude", "claude-code", "launcher", "tui", "config", "rlsbl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["strictcli"]

[project.scripts]
claudewheel = "claudewheel.cli:main"

[project.urls]
Homepage = "https://github.com/smm-h/claudewheel"
Repository = "https://github.com/smm-h/claudewheel"

[tool.hatch.build.targets.wheel]
packages = ["claudewheel"]

[tool.uv.sources]
strictcli = { path = "/home/m/Projects/strictcli/python", editable = true }
