[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudewheel"
version = "0.23.1"
description = "TUI launcher for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "smm-h", email = "smmh72@gmail.com" },
]
keywords = ["claude", "claude-code", "launcher", "tui", "config", "rlsbl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = ["strictcli>=0.27.0"]

[project.scripts]
claudewheel = "claudewheel.cli:main"

[project.urls]
Homepage = "https://github.com/smm-h/claudewheel"
Repository = "https://github.com/smm-h/claudewheel"

[tool.hatch.build.targets.wheel]
packages = ["claudewheel"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff.lint]
# Pin ruff's current default rule families explicitly rather than relying on
# the implicit default. This keeps the enforced rule set stable across ruff
# upgrades that may change what "default" means.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
strict = true
files = ["claudewheel"]

# strictcli ships no py.typed marker yet (upstream fix filed separately),
# so it resolves as Any-typed. Suppress the missing-imports error until
# strictcli ships py.typed.
[[tool.mypy.overrides]]
module = "strictcli.*"
ignore_missing_imports = true
